<resources>
    <string name="app_name">WALayout</string>
    <string name="label_profil">Profile</string>
    <string name="label_main">WhatsApp</string>
    <string name="my_name">4140-Fajar Achmad Yusup</string>
    <string name="message">This is not your username or pin. This name will be visible to your WhatsApp contacts</string>
    <string name="phone_stat">Phone and status</string>
    <string name="my_stat">Hey there I am using WhatsApp</string>
    <string name="my_phone">+62 813-2136-0671</string>
    <string name="text_button_profile">Open Profile</string>
    <string name="text_button_notification">Show Notification</string>
    <string name="text_button_logo">Show Logo</string>
    <string name="fitur_undo">Fitur Undo belum jadi</string>
    <string name="title_dialog">Ganti Foto</string>
    <string name="text_dialog">Ambil foto profil dari mana ?</string>
    <string name="foto_changed">Foto telah diganti</string>
</resources>
