<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@color/colorGrey">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".Profile">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/foto"
                android:layout_alignParentEnd="false"
                android:layout_alignParentStart="false"
                android:id="@+id/fotoProfil" />

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/camera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_camera_alt_black_24dp"
                android:layout_gravity="center_horizontal"
                android:layout_alignParentBottom="true"
                android:layout_alignRight="@+id/fotoProfil"
                android:layout_alignEnd="@+id/fotoProfil"/>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="25dp"
            android:orientation="vertical">
            <Button
                android:background="@color/colorWhite"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/my_name"
                android:textAlignment="textStart"
                android:drawableRight="@drawable/ic_mode_edit_black_24dp"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"/>
            <TextView
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/message"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"/>
            <Button
                android:background="@color/colorWhite"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/phone_stat"
                android:textAlignment="textStart"
                android:textColor="@color/colorPrimary"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"/>
            <Button
                android:background="@color/colorWhite"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/my_stat"
                android:textAlignment="viewStart"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"/>
            <Button
                android:background="@color/colorWhite"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/my_phone"
                android:textAlignment="viewStart"
                android:layout_marginTop="5dp"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"/>
        </LinearLayout>

    </LinearLayout>

</ScrollView>
